cmake_minimum_required(VERSION 3.8)
project(Universal_Card)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_DEBUG "-fsanitize=leak -g -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include_directories(third_party)
set(LIB_FILES third_party/CChipCardReader.cpp third_party/CChipCardReader.hpp src/CUniversalCardReader.cpp src/CUniversalCardReader.hpp third_party/ICardReader.hpp src/CDecryptUniversalCard.cpp src/CDecryptUniversalCard.hpp src/CPassport.cpp src/CPassport.hpp src/CInsurance.cpp src/CInsurance.hpp src/CBankCard.cpp src/CBankCard.hpp src/CUniversalCard.cpp src/CUniversalCard.hpp src/CUniversalCardFactory.cpp src/CUniversalCardFactory.hpp)
add_library(UniversalCardReader ${LIB_FILES})
if (WITH_TEST STREQUAL "ON")
    set(TEST_SOURCES test/test.cpp test/test.hpp)
    add_executable(TestReader ${TEST_SOURCES})
    target_link_libraries(TestReader UniversalCardReader)
    endif()